--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-barcode-scanner": "^4.0.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-qr-barcode-scanner": "^2.1.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
