--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.2.0",
     "react-barcode-scanner": "^4.0.0",
     "react-dom": "^19.2.0",
-    "react-qr-barcode-scanner": "^2.1.20"
+    "react-qr-barcode-scanner": "^2.1.20",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
